--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand:400,600,700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="fonts/icomoon/style.css">
+    <link rel="icon" href="images/lg2.png" type="image/png" sizes="16x16">
 
     <link rel="stylesheet" href="css/owl.carousel.min.css">
 
